// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Test serializing/deserializing basic class instances Player 2`] = `
Player {
  "ammo": Ammo {
    "bulletCooldown": 800,
    "bulletsPerShot": 1,
    "leftClickState": CannonState {
      "ammo": undefined,
      "cooldown": {
        "cooldown": 800,
        "lastUsage": 0,
      },
    },
    "player": undefined,
    "rocketCooldown": {
      "cooldown": 1500,
      "lastUsage": 0,
    },
  },
  "deaths": 0,
  "destroyed": false,
  "health": 10,
  "hitbox": Hitbox {
    "body": undefined,
    "size": 20,
  },
  "kills": 0,
  "name": "test_player",
  "physics": Physics {
    "acceleration": Vector {
      "x": 0,
      "y": 0,
    },
    "position": Vector {
      "x": 3,
      "y": 4,
    },
    "velocity": Vector {
      "x": 0,
      "y": 0,
    },
  },
  "powerups": PowerupStateMap {
    "map": 
Map {
      "HEALTH_PACK" => PowerupState {
        "duration": 1,
        "expirationTime": 2,
        "expired": false,
        "healAmount": 0,
        "type": "HEALTH_PACK",
      },
    }
,
    "player": undefined,
  },
  "socketID": "socket_id",
  "speed": 0.4,
  "tankAngle": 2,
  "tankTrailCooldown": {
    "cooldown": 15,
    "lastUsage": 0,
  },
  "turnRate": 0,
  "turretAngle": 0,
}
`;

exports[`Test serializing/deserializing complex objects Fake GameState object with some fake entities 1`] = `
"{
  "self": {
    "destroyed": false,
    "physics": {
      "position": {
        "x": 3,
        "y": 4
      },
      "velocity": {
        "x": 0,
        "y": 0
      },
      "acceleration": {
        "x": 0,
        "y": 0
      }
    },
    "hitbox": {
      "size": 20
    },
    "name": "test_player",
    "socketID": "socket_id",
    "tankAngle": 2,
    "turretAngle": 0,
    "speed": 0.4,
    "health": 10,
    "tankTrailCooldown": {
      "lastUsage": 0,
      "cooldown": 15
    },
    "kills": 0,
    "deaths": 0,
    "powerups": {
      "map": {}
    },
    "ammo": {
      "bulletCooldown": 800,
      "bulletsPerShot": 1,
      "rocketCooldown": {
        "lastUsage": 0,
        "cooldown": 1500
      },
      "leftClickState": {
        "cooldown": {
          "lastUsage": 0,
          "cooldown": 800
        },
        "_type": "CannonState"
      }
    },
    "__type": "Player"
  },
  "players": [],
  "entities": [
    {
      "destroyed": false,
      "physics": {
        "position": {
          "x": 3,
          "y": 4
        },
        "velocity": {
          "x": -1.2,
          "y": 1.4695761589768238e-16
        },
        "acceleration": {
          "x": 0,
          "y": 0
        }
      },
      "hitbox": {
        "size": 10
      },
      "angle": 3.141592653589793,
      "damage": 1,
      "distanceTraveled": 0,
      "__type": "Bullet"
    },
    {
      "destroyed": false,
      "physics": {
        "position": {
          "x": 3,
          "y": 4
        },
        "velocity": {
          "x": 0.85,
          "y": 0
        },
        "acceleration": {
          "x": 0,
          "y": 0
        }
      },
      "hitbox": {
        "size": 10
      },
      "angle": 0,
      "damage": 3,
      "distanceTraveled": 0,
      "maxDistance": 5,
      "__type": "Rocket"
    },
    {
      "destroyed": false,
      "physics": {
        "position": {
          "x": 1,
          "y": 1
        },
        "velocity": {
          "x": 0,
          "y": 0
        },
        "acceleration": {
          "x": 0,
          "y": 0
        }
      },
      "hitbox": {
        "size": 10
      },
      "type": "HEALTH_PACK",
      "__type": "Powerup"
    }
  ]
}"
`;

exports[`Test serializing/deserializing complex objects Fake GameState object with some fake entities 2`] = `
{
  "entities": [
    Bullet {
      "angle": 3.141592653589793,
      "damage": 1,
      "destroyed": false,
      "distanceTraveled": 0,
      "hitbox": Hitbox {
        "body": undefined,
        "size": 10,
      },
      "physics": Physics {
        "acceleration": Vector {
          "x": 0,
          "y": 0,
        },
        "position": Vector {
          "x": 3,
          "y": 4,
        },
        "velocity": Vector {
          "x": -1.2,
          "y": 0.00000000000000014695761589768238,
        },
      },
      "source": undefined,
    },
    Rocket {
      "angle": 0,
      "damage": 3,
      "destroyed": false,
      "distanceTraveled": 0,
      "hitbox": Hitbox {
        "body": undefined,
        "size": 10,
      },
      "maxDistance": 5,
      "physics": Physics {
        "acceleration": Vector {
          "x": 0,
          "y": 0,
        },
        "position": Vector {
          "x": 3,
          "y": 4,
        },
        "velocity": Vector {
          "x": 0.85,
          "y": 0,
        },
      },
      "source": undefined,
    },
    Powerup {
      "destroyed": false,
      "hitbox": Hitbox {
        "body": undefined,
        "size": 10,
      },
      "physics": Physics {
        "acceleration": Vector {
          "x": 0,
          "y": 0,
        },
        "position": Vector {
          "x": 1,
          "y": 1,
        },
        "velocity": Vector {
          "x": 0,
          "y": 0,
        },
      },
      "type": "HEALTH_PACK",
    },
  ],
  "players": [],
  "self": Player {
    "ammo": Ammo {
      "bulletCooldown": 800,
      "bulletsPerShot": 1,
      "leftClickState": CannonState {
        "ammo": undefined,
        "cooldown": {
          "cooldown": 800,
          "lastUsage": 0,
        },
      },
      "player": undefined,
      "rocketCooldown": {
        "cooldown": 1500,
        "lastUsage": 0,
      },
    },
    "deaths": 0,
    "destroyed": false,
    "health": 10,
    "hitbox": Hitbox {
      "body": undefined,
      "size": 20,
    },
    "kills": 0,
    "name": "test_player",
    "physics": Physics {
      "acceleration": Vector {
        "x": 0,
        "y": 0,
      },
      "position": Vector {
        "x": 3,
        "y": 4,
      },
      "velocity": Vector {
        "x": 0,
        "y": 0,
      },
    },
    "powerups": PowerupStateMap {
      "map": Map {},
      "player": undefined,
    },
    "socketID": "socket_id",
    "speed": 0.4,
    "tankAngle": 2,
    "tankTrailCooldown": {
      "cooldown": 15,
      "lastUsage": 0,
    },
    "turnRate": 0,
    "turretAngle": 0,
  },
}
`;
